syntax="proto2";

package dst.server.protocol.pb;

option java_package="org.dst.server.generated";
option java_outer_classname="StringProtocol";
option cc_generic_services = true;

//string
message StringPutRequest {
    required string key = 1;
    required string value = 2;
};

message StringPutResponse {
    required string status = 1;
};

message StringGetRequest {
    required string key = 1;
}

message StringGetResponse {
    required string status = 1;
    optional string value =2;
};

service DstStringService {
    rpc strPut(StringPutRequest) returns (StringPutResponse);
    rpc strGet(StringGetRequest) returns (StringGetResponse);
}
